1.70 (XXXX-XX-XX):
  Fix issue MR-77 - VerifyDatabaseVersion (Config.Connections.Save) failed. Version string portion was too short or too long.
  Fix issue MR-79 - MoveUp/Down item doesn't work + Sort button broken
  Fix issue MR-93 - Regional settings problem when using SQL connection in mRemoteNG
  Fix issue MR-97 - Integrate Dutch translation
  Fix issue MR-98 - Integrate Russian and Ukranian translations
  Fix issue MR-99 - Integrate Spanish translation
  Added compatibility check for "Use FIPS compliant algorithms" security setting.
  Improved reporting of errors when encrypting and decrypting connection files.
  Added partial Polish translation.
  The panel tabs are now hidden if only one panel is open.
  Fix focus issue with RDP connections when changing tabs.
  Show changes live as connection tabs are being dragged around to change their order.
  Updated PuTTY to version 0.62.
  Improved error handling when loading connection files.
  Fixed bugs with creating a new connection file.

1.69 (2011-12-09):
  Fixed issue #66 - Fresh Install Fails to Create Config
  Fixed issue #69 - Connection file gets erased
  Fixed issue #72 - scrollbars added to RDP window after minimize/restore of mRemoteNG
  Disabled automatic updates in the portable edition
  Fixed file name in window title changing when exporting an XML file.
  Fixed Use only Notifications panel checkbox.
  Updated PuTTY to version 0.61
  Binaries are now digitally signed
  Added Credits, License, and Version History items to the Start Menu and made Start Menu item names localizable.

1.68 (2011-07-07):
  Fixed issue #48 - VerifyDatabaseVersion fails with new (empty) database tables.
  Fixed issue #60 - Can't save connections file
  Fixed issue #62 - Connection file error upon launch.

1.67 (2011-06-05):
  Fixed migration of external tools configuration and panel layout from Local to Roaming folder.
  Disable ICA Hotkeys for Citrix connections.  Fixes issue with international users.