@@ -1,5 +1,6 @@
 1.70 (XXXX-XX-XX):
   Fix issue MR-77 - VerifyDatabaseVersion (Config.Connections.Save) failed. Version string portion was too short or too long.
+  Fix issue MR-78 - Renaming Connections
   Fix issue MR-79 - MoveUp/Down item doesn't work + Sort button broken
   Fix issue MR-93 - Regional settings problem when using SQL connection in mRemoteNG
   Fix issue MR-97 - Integrate Dutch translation
